--- a/tts-server/src/main/resources/static/components/main-component/main-component.html
+++ b/tts-server/src/main/resources/static/components/main-component/main-component.html
@@ -4,29 +4,24 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h3 class="panel-title">Text To Speech</h3>
+                    <button class="btn btn-primary" ng-click="test()">Test Server-Side Speech</button>
             </div>
             <div class="panel-body">
                 <form>
                     <div class="form-group">
-                        <label for="exampleTextarea">Example textarea</label>
-                        <textarea class="form-control" id="textInputArea" rows="3" 
-                                placeholder="Enter any text here that you wish to convert to speech. (NOTE: hitting <ENTER> will submit the text)" 
-                                autofocus
-                                onchange="doSubmit(event)"
-                        ></textarea>
+                        <textarea 
+                            ng-model="textToSend"
+                            class="form-control" rows="3" 
+                            placeholder="Enter any text here that you wish to convert to speech. (NOTE: hitting ENTER will submit the text)" 
+                            enter-submit="sendMessage()"
+                            autofocus
+                            ></textarea>
                     </div>
-                    <!--
-  <div class="form-group">
-    <label for="exampleInputFile">File input</label>
-    <input type="file" class="form-control-file" id="exampleInputFile" aria-describedby="fileHelp">
-    <small id="fileHelp" class="form-text text-muted">This is some placeholder block-level help text for the above input. It's a bit lighter and easily wraps to a new line.</small>
-  </div>
-  -->
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button class="btn btn-primary" ng-click="test()">Test Server-Side Speech</button>
                 </form>
             </div>
         </div>
-
     </div>
+    {{textToSend}}
     <page-footer></page-footer>
 </div>
